<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/latointerbold"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_form_entry"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:drawableEnd="@drawable/form"
        android:drawablePadding="16dp"
        android:fontFamily="@font/latointerregular"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/form_entry"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_data"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_bg"
        android:drawableEnd="@drawable/data"
        android:drawablePadding="16dp"
        android:fontFamily="@font/latointerregular"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/data_list"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_form_entry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_information"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_bg"
        android:drawableEnd="@drawable/info"
        android:drawablePadding="16dp"
        android:fontFamily="@font/latointerregular"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/information"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_bg"
        android:drawableEnd="@drawable/exit"
        android:drawablePadding="16dp"
        android:fontFamily="@font/latointerregular"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_information" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/latointerregular"
        android:text="@string/create"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exit" />
</androidx.constraintlayout.widget.ConstraintLayout>