<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormEntryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/back_button"
            android:src="@drawable/icon_back"
            app:tint="@color/black">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/latointerbold"
            android:text="@string/form_entry"
            android:textColor="@color/black">

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_form_entry">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nikEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/nik"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nikEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/latointerregular"
                    android:inputType="number"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/latointerregular"
                    android:inputType="text"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/latointerregular"
                    android:inputType="phone"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/latointersemibold"
                android:text="@string/gender"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kelamin">

                <RadioButton
                    android:id="@+id/rb_laki"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/latointerregular"
                    android:text="@string/laki"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_perempuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/latointerregular"
                    android:text="@string/perempuan"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/latointersemibold"
                android:text="@string/address"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_alamat">

                <TextView
                    android:id="@+id/tv_isi_alamat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/latointerregular"
                    android:text="@string/no_address"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_pilih_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kelamin">

                <TextView
                    android:id="@+id/tv_judul_gambar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/latointersemibold"
                    android:text="@string/photo_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_tanggal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/latointerregular"
                    android:gravity="end"
                    android:text="@string/date"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageDisplay"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/button_bg"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kelamin"
                app:srcCompat="@drawable/ic_place_holder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageDisplay">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_save"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_calendar"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_bg_item"
                    android:gravity="center"
                    android:src="@drawable/icon_calendar"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_camera"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_bg_item"
                    android:gravity="center"
                    android:src="@drawable/icon_camera"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_choose_image"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_bg_item"
                    android:gravity="center"
                    android:src="@drawable/icon_folder"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>